--- a/public/adl/sandbox/views/edit.html
+++ b/public/adl/sandbox/views/edit.html
@@ -3,7 +3,29 @@
 	$(document).ready(function()
 	{
 		getLoginInfo(function(){}, redirect);
+		vwfPortalModel.restoreList = ko.observableArray();
+		vwfPortalModel.restoreState = function(obj){
+		
+			if(window.confirm("Are you sure you want to restore this state?")){
+				$.get('/vwfDataManager.svc/restorebackup?SID=' + sid + '&statename=' + obj.file, function(data){
+					console.log(data);
+				});
+			}
+		};
+		$.get('/vwfDataManager.svc/stateslist?SID=' + sid, function(data){
 			
+			var tempData = JSON.parse(data);
+			for(var i = 0; i < tempData.length; i++){
+				if(tempData[i].file == "state"){
+					tempData.splice(i, 1);
+					break;
+				}
+			}
+			
+			console.log(JSON.parse(data));
+			vwfPortalModel.restoreList(tempData);
+		});
+		
 		$.ajax('/vwfDataManager.svc/statedata?SID=' + sid,
 		{
 			cache:false,
@@ -61,6 +83,20 @@
 				<input type="submit" class='btn btn-default' style="float:right;margin-top:7px;"  value="Edit"/>
 			</fieldset>
 		</form>
+	</div>
+	<div class="col-md-5 col-md-offset-3">
+		<table data-bind="submit:handleEditButton" class="table">
+			<tr>
+				<th>Name</th>
+				<th>Date</th>
+			</tr>
+			<tbody data-bind="foreach:restoreList">
+				<tr>
+					<td><a href="" data-bind="text:file, click:$root.restoreState"></a></td>
+					<td data-bind="text:time"></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </div>
 <div class="row">	
