--- a/public/adl/sandbox/views/layout.html
+++ b/public/adl/sandbox/views/layout.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="{{root}}/css/colorpicker.css" /> 
     <link rel="stylesheet" media="screen" type="text/css" href="{{root}}/css/bootstrap.min.css" />
 	<link rel="stylesheet" media="screen" type="text/css" href="{{root}}/css/style.css" />
+	<link rel="stylesheet" media="screen" type="text/css" href="{{root}}/css/alertify.core.css" />
+	<link rel="stylesheet" media="screen" type="text/css" href="{{root}}/css/alertify.default.css" />
 	<style>
 		@media (max-width: 1180px){
 			.sliderContainer{
@@ -152,5 +154,6 @@
 		</div>
 	</div>
 	<a href="https://github.com/adlnet/vwf/tree/node_threejs"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+	<script type="text/javascript" src="{{root}}/js/alertify.min.js"></script>
 </body>
 </html>
