--- a/public/adl/sandbox/views/worlds.html
+++ b/public/adl/sandbox/views/worlds.html
@@ -18,7 +18,12 @@
 					<input id="filter" class="form-control" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
 				</div>
 			</div>
-			
+			<div class="row" style="margin-top:45px;margin-bottom:70px;" data-bind="visible:(displayWorldObjects().length==0&&filter().length > 0) || filter().length == 0">	
+				<div class="col-md-4 col-md-offset-4" style="text-align:center;">
+					<span style="font-weight:bold;" data-bind="visible:filter().length > 0">No worlds found</span>
+					<span style="font-weight:bold;" data-bind="visible:filter().length == 0">Enter a search term</span>
+				</div>
+			</div>
 			<div class="row" id="activeRow" data-bind="foreach:displayWorldObjects">				
 				<div data-bind="style: $root.alignWorldsList($index()), visible:isVisible, css:$data.featured?'col-md-3 worldHeightPadding':'col-md-3 worldHeightMiniPadding'">
 					<div data-bind="event: {mouseover:$root.handleEditDisplay, mouseout:$root.handleEditDisplay}, css: $data.featured?'featuredInstance':'worldBox'">
@@ -62,11 +67,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="row" style="margin-top:45px;margin-bottom:70px;" data-bind="visible:displayWorldObjects().length==0">	
-				<div class="col-md-4 col-md-offset-4" style="text-align:center;">
-					<span style="font-weight:bold;">No worlds found</span>
-				</div>
-			</div>
 			<div class="row" style="margin-bottom:45px;">
 				<div class="col-md-1 col-md-offset-4" style="text-align:right;">
 					<a class="btn btn-default" data-bind="click:getPreviousPage, css:previousDisabled()?'disabled btn btn-default':'btn btn-default'"><i class="glyphicon glyphicon-chevron-left"></i></a>
@@ -91,11 +91,11 @@
 							}
 
 							else{
-								window.alert("World was not successfully copied.");
+								alertify.error("World was not successfully copied.");
 							}
 						})
 						.error(function(){
-							window.alert("World was not successfully copied.");
+							alertify.error("World was not successfully copied.");
 						});
 					}
 				});	
