--- a/public/adl/sandbox/views/worlds.html
+++ b/public/adl/sandbox/views/worlds.html
@@ -14,14 +14,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 col-md-offset-3" style="margin-bottom:5px;text-align:right;float:right;">
-					<input id="filter" class="form-control" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
+				<div class="col-md-3 col-md-offset-3" style="margin-bottom:5px;text-align:right;float:right;" data-bind="visible:displayWorldObjects().length>0 && filter().length > 0">
+					<input class="form-control filter" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
 				</div>
 			</div>
 			<div class="row" style="margin-top:45px;margin-bottom:70px;" data-bind="visible:(displayWorldObjects().length==0&&filter().length > 0) || filter().length == 0">	
 				<div class="col-md-4 col-md-offset-4" style="text-align:center;">
-					<span style="font-weight:bold;" data-bind="visible:filter().length > 0">No worlds found</span>
-					<span style="font-weight:bold;" data-bind="visible:filter().length == 0">Enter a search term</span>
+					<span style="font-weight:bold;" data-bind="visible:filter().length > 0">No worlds found, try again</span>
+					<div style="font-weight:bold;" data-bind="visible:filter().length == 0">
+						<p>Enter a search term</p>
+						<input class="form-control filter" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
+					</div>		
 				</div>
 			</div>
 			<div class="row" id="activeRow" data-bind="foreach:displayWorldObjects">				
@@ -104,8 +107,8 @@
 			ko.applyBindings(vwfPortalModel);
 			getLoginInfo(function(){
 				
-				$('#filter').val(window.location.hash.substr(1));
-				$('#filter').keydown();
+				$('.filter').val(window.location.hash.substr(1));
+				$('.filter').keydown();
 				showStates();
 
 				window.setInterval(function(){
