--- a/public/adl/sandbox/views/worlds.html
+++ b/public/adl/sandbox/views/worlds.html
@@ -14,15 +14,15 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3 col-md-offset-3" style="margin-bottom:5px;text-align:right;float:right;" data-bind="visible:displayWorldObjects().length>0 && filter().length > 0">
+				<div class="col-md-3 col-md-offset-3" style="margin-bottom:5px;text-align:right;float:right;" data-bind="visible:!initialSearchDisplay()">
 					<input class="form-control filter" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
 				</div>
 			</div>
-			<div class="row" style="margin-top:45px;margin-bottom:70px;" data-bind="visible:(displayWorldObjects().length==0&&filter().length > 0) || filter().length == 0">	
+			<div class="row" style="margin-top:45px;margin-bottom:70px;" data-bind="visible:(displayWorldObjects().length==0&&filter().length > 0) || initialSearchDisplay">	
 				<div class="col-md-4 col-md-offset-4" style="text-align:center;">
-					<span style="font-weight:bold;" data-bind="visible:filter().length > 0">No worlds found, try again</span>
-					<div style="font-weight:bold;" data-bind="visible:filter().length == 0">
-						<p>Enter a search term</p>
+					<p style="font-weight:bold;" data-bind="visible:filter().length > 0">No worlds found, try again</p>
+					<div style="font-weight:bold;" data-bind="visible:initialSearchDisplay">
+						<p data-bind="visible:filter().length  == 0">Enter a search term</p>
 						<input class="form-control filter" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
 					</div>		
 				</div>
