--- a/public/adl/sandbox/views/publish.html
+++ b/public/adl/sandbox/views/publish.html
@@ -101,7 +101,7 @@
 				<br/>
 				<input type='checkbox' id='chkSinglePlayer'   name='SinglePlayer'></input><label for='SinglePlayer'>Single Player</label>
 				<br/>
-				<input type='checkbox' id='chkAllowAnonymous'  name='AllowAnonymous'></input><label for='AllowAnonymous'>Allow Anonymouse Users</label>
+				<input type='checkbox' id='chkAllowAnonymous'  name='AllowAnonymous'></input><label for='AllowAnonymous'>Allow Anonymous Users</label>
 				<br/>
 				<input type='checkbox' id='chkCreateAvatar' name='CreateAvatar'></input><label for='CreateAvatar'>Create and Avatar for each user</label>
 				<br/>
