fixes related to versioned url

--- a/public/adl/sandbox/views/create.html
+++ b/public/adl/sandbox/views/create.html
@@ -16,7 +16,7 @@
 			jQuery.ajax(
 			{
 				type: 'POST',
-				url: '/vwfDataManager.svc/createstate',
+				url: './vwfDataManager.svc/createstate',
 				data: JSON.stringify(statedata),
 				success:function(data,status,xhr)
 				{
