--- a/support/client/lib/vwf/view/editorview/menus.html
+++ b/support/client/lib/vwf/view/editorview/menus.html
@@ -9,8 +9,6 @@
 	  <li><a href="#" id="MenuLogOut">Log Out</a></li>
 	  <li><a href="#" id="MenuSaveNow">Save Now</a></li>
 	  <li><a href="#" id="MenuShareWorld">Share</a></li>
-	  <li><a href="#" id="MenuPublish">Publish (Coming Soon!)</a></li>
-	  
 </ul>
 </li>
 
@@ -21,8 +19,8 @@
 	  <li><a href="#" id="MenuPaste">Paste</a></li>
 	  <li><a href="#" id="MenuDuplicate">Duplicate</a></li>
 	  <li><a href="#" id="MenuDelete">Delete</a></li>
-	  <li><a href="#" id="MenuSaveCopy">Save Copy</a></li>
-	  <li><a href="#" id="MenuPublish">Publish</a></li>
+	  <li><a href="#" id="MenuSaveCopy">Save Selected</a></li>
+	  <li><a href="#" id="MenuPublish">Publish Selected</a></li>
 	  <li><a href="#" id="MenuShare">Set Permissions</a></li>
 	  <li><a id="MenuSelect" href="#">Select</a>
 		<ul>
