--- a/support/client/lib/vwf/view/editorview/menus.html
+++ b/support/client/lib/vwf/view/editorview/menus.html
@@ -9,6 +9,7 @@
 	  <li><a href="#" id="MenuLogOut">Log Out</a></li>
 	  <li><a href="#" id="MenuSaveNow">Save Now</a></li>
 	  <li><a href="#" id="MenuShareWorld">Share</a></li>
+	  <li><a href="#" id="SetThumbnail">Set World Thumbnail</a></li>
 </ul>
 </li>
 
