--- a/public/adl/sandbox/css/style.css
+++ b/public/adl/sandbox/css/style.css
@@ -356,15 +356,7 @@ text-align:left;
 	font-size: 25px;
 }
 
-.worldBox{
 
-	border: 1px solid #eee;
-	margin: 0;
-	border-radius: 8px;
-	padding: 5px 5px 3px 5px;
-	max-height: 150px;
-	min-height: 150px;
-}
 
 .activeWorld{
 
@@ -402,6 +394,21 @@ text-align:left;
 	padding: 5px 5px 3px 5px;
 	max-height: 230px;
 	min-height: 230px;
+}
+
+.worldBox{
+
+	border: 1px #E6E6E6 solid;
+	border-bottom: 1px #dfdfdf solid;
+	background-color: #fDfDfD;
+	border-radius: 8px;
+	padding: 5px 5px 3px 5px;
+	max-height: 230px;
+	min-height: 230px;
+}
+.worldBox .boxContentWrapper{
+
+	padding: 0 5px;
 }
 
 .worldImage{
