--- a/public/adl/sandbox/views/worlds.html
+++ b/public/adl/sandbox/views/worlds.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div class="row" id="activeRow" data-bind="foreach:displayWorldObjects">				
-				<div data-bind="style: $root.alignWorldsList($index()), visible:isVisible, css:$data.featured?'col-md-3 worldHeightPadding':'col-md-3 worldHeightMiniPadding'">
+				<div data-bind="style: $root.alignWorldsList($index()), visible:isVisible, css:$data.featured?'col-md-3 worldHeightPadding':'col-md-3 worldHeightPadding'">
 					<div data-bind="event: {mouseover:$root.handleEditDisplay, mouseout:$root.handleEditDisplay}, css: $data.featured?'featuredInstance':'worldBox'">
 						
 						<div class="boxContentWrapper">
@@ -36,7 +36,7 @@
 								<a data-bind="attr:{href:'{{root}}/'+id}, text:$root.getShorterStr(title, 20)" href="">Title</a>
 								<span class="owner" data-bind="text:' - ' + owner"></span>
 							</div>
-							<!-- ko if: $data.featured --><img data-bind="attr:{src:'{{root}}/img/' + id + '_small.png'}" class="worldImage" /><!-- /ko -->
+							<img data-bind="attr:{src:'{{root}}/vwfDataManager.svc/thumbnail?SID=' + id + ''}" class="worldImage" onerror="this.src = './img/thumbnotfound.png';"/>
 							<div class="worldInfo">
 								<a data-bind="attr:{href:'{{root}}/'+id}" style="text-decoration:none;">
 									<span class="description" data-bind="text:description?$root.getShorterStr(description, 75):'No description'"></span>
@@ -56,7 +56,7 @@
 							<div style="border-left:1px solid #e7e7e7;float:right;height:18px;width:120px;" data-bind="visible:$root.user().isLoggedIn && ($root.user().username == $data.owner || $root.user().isAdmin) && editVisible">
 								<a title="Delete World" class="editstatedelete glyphicon glyphicon-remove" data-bind="attr:{href:'{{root}}/'+'remove?id='+id}"></a>
 								<a title="Edit World" class="editstatedata glyphicon glyphicon-pencil" data-bind="attr:{href:'{{root}}/'+'edit?id='+id}"></a>
-								<a title="Publish World" class="editstatedata glyphicon glyphicon-print" data-bind="visible:!($data.publishSettings), attr:{href:'{{root}}/'+'publish?id='+id}"></a>								
+								<a title="Publish World" class="editstatedata glyphicon glyphicon-print" data-bind="attr:{href:'{{root}}/'+'publish?id='+id}"></a>								
 							</div>
 							<div data-bind="visible:$root.user().isLoggedIn && editVisible">
 								<a title="Clone World" class="editstatecopy glyphicon glyphicon-export" data-bind="click:$root.cloneWorld" style="margin-right:18px;"></a>
