Added initial VW Sandbox banner to header [#59438664]

--- a/public/adl/sandbox/css/style.css
+++ b/public/adl/sandbox/css/style.css
@@ -143,6 +143,9 @@ height:315px;
 }
 #pageLogo {
 	padding: 10px 0;
+	background: url('../img/header.png');
+	height:158px;
+	width:100%;
 }
 #pageLogo h1, #pageLogo h2{
 
