--- a/public/adl/sandbox/views/layout.html
+++ b/public/adl/sandbox/views/layout.html
@@ -91,11 +91,8 @@
 			</div>
 		</div>		
 		<div class="container" style="box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);padding:0">
-			<div class="content container">
-				<div id="pageLogo">
-					<h1 style="text-align:center;">Virtual World Sandbox</h1>
-					<h3 style="text-align:center;">Virtual worlds right in your browser</h3>
-				</div>
+			<div class="content container" style="border:none;padding:0;">
+				<div id="pageLogo"></div>
 				<div class="linkMenu">
 					<a href="/">Home</a>
 					<a href="{{root}}/worlds">Worlds</a> 
