--- a/public/adl/sandbox/views/worlds.html
+++ b/public/adl/sandbox/views/worlds.html
@@ -18,13 +18,14 @@
 					<input class="form-control filter" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
 				</div>
 			</div>
-			<div class="row" style="margin-top:45px;margin-bottom:70px;" data-bind="visible:(displayWorldObjects().length==0&&filter().length > 0) || initialSearchDisplay">	
+			<div class="row" style="margin-top:45px;margin-bottom:70px;" data-bind="visible:(displayWorldObjects().length==0) || initialSearchDisplay">	
 				<div class="col-md-4 col-md-offset-4" style="text-align:center;">
-					<p style="font-weight:bold;" data-bind="visible:filter().length > 0">No worlds found, try again</p>
+					<p style="font-weight:bold;" data-bind="visible:filter().length > 0">No worlds found, please try again</p>
 					<div style="font-weight:bold;" data-bind="visible:initialSearchDisplay">
-						<p data-bind="visible:filter().length  == 0">Enter a search term</p>
+						<p data-bind="visible:filter().length==0">Enter a search term</p>
 						<input class="form-control filter" type="text" placeholder="Search Worlds" data-bind="value:filterVal, valueUpdate:'afterkeydown'" />
 					</div>		
+					<p style="font-weight:bold;" data-bind="visible:filter().length == 0 && displayWorldObjects().length==0 && !initialSearchDisplay()">There are no featured worlds to display, please try searching.</p>
 				</div>
 			</div>
 			<div class="row" id="activeRow" data-bind="foreach:displayWorldObjects">				
