--- a/public/adl/sandbox/views/layout.html
+++ b/public/adl/sandbox/views/layout.html
@@ -92,12 +92,22 @@
 		</div>		
 		<div class="container" style="box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);padding:0">
 			<div class="content container" style="border:none;padding:0;">
-				<div id="pageLogo"></div>
-				<div class="linkMenu">
-					<a href="/">Home</a>
-					<a href="{{root}}/worlds">Worlds</a> 
-					<a href="http://www.youtube.com/watch?list=PLbhwHX3OvksljQcxLkRT3YvyjgQaIY8m2&v=aWRQJJnBi5c">Videos</a> 
-					<a href="{{root}}/help">Help</a> 
+				<div id="pageLogo">
+					<div id="logo">
+						<div style=" float:left;">
+							<img src="{{root}}/img/VWS_Logo.png" />
+						</div>
+						<div style=" margin-left:10px;margin-top:50px;float:left;">
+							<img src="{{root}}/img/VW_text.png" />
+							<img src="{{root}}/img/Sandbox_text.png" />
+						</div>
+					</div>
+					<div class="linkMenu">
+						<a href="/">Home</a>
+						<a href="{{root}}/worlds">Worlds</a> 
+						<a href="http://www.youtube.com/watch?list=PLbhwHX3OvksljQcxLkRT3YvyjgQaIY8m2&v=aWRQJJnBi5c">Videos</a> 
+						<a href="{{root}}/help">Help</a> 	
+					</div>
 				</div>
 			</div>	
 			
