--- a/views/admin.html.erb
+++ b/views/admin.html.erb
@@ -5,7 +5,7 @@
         <title>Admin</title>
 
         <script type="text/javascript" src="../jquery-1.7.1.js"></script>
-        <script type="text/javascript" src="../jquery-ui-1.8.16.custom.js"></script>
+        <script type="text/javascript" src="../jquery-ui-1.10.3.custom.min.js"></script>
         <script type="text/javascript" src="../async.js"></script>
 
         <script type="text/javascript">if (!window.WebSocket && window.MozWebSocket) window.WebSocket=window.MozWebSocket</script> <!-- for Firefox 5 -->
@@ -251,7 +251,7 @@
         </script>
 
         <link rel="stylesheet" type="text/css" href="index.css" />
-        <link rel="stylesheet" type="text/css" href="jquery-ui-1.8.16.custom.css" />
+        <link rel="stylesheet" type="text/css" href="jquery-ui-1.10.3.custom.min.css" />
 
         <style type="text/css">
 
