Made major upgrades to layout of Sandbox header [#59438664]

--- a/public/adl/sandbox/css/style.css
+++ b/public/adl/sandbox/css/style.css
@@ -159,6 +159,7 @@ height:315px;
 	height:100px;
 	width:100%;
 	overflow:visible;
+	background-image: url('/adl/sandbox/img/grid.png');
 }
 #pageLogo h1, #pageLogo h2{
 
