--- a/public/web/css/vwf.css
+++ b/public/web/css/vwf.css
@@ -142,7 +142,7 @@ footer ul li {
 .description {
   float:left;
   text-align:left;
-  width:350;
+  width:350px;
   padding-left:20px;
   padding-right:5px;
 }
