--- a/public/web/catalog.html.erb
+++ b/public/web/catalog.html.erb
@@ -135,13 +135,13 @@
 			<table class="table table-striped">
 				<tr>
 					<td style="width:25%">
-						<a href="https://ec2-54-226-9-164.compute-1.amazonaws.com/KimRayValve" target="_blank">
-							<img src="http://ec2-54-226-9-164.compute-1.amazonaws.com/KimRayValve/index.vwf.catalog.png" alt="KimRayValve" / style="vertical-align:middle;">            
+						<a href="https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray" target="_blank">
+							<img src="http://ec2-54-226-9-164.compute-1.amazonaws.com/kimray/index.vwf.catalog.png" alt="kimray" / style="vertical-align:middle;">            
 						</a>
 					</td>
 					<td style="width:75%">
 						<h3 style="float:left;vertical-align:middle;">Kimray Valve</h3> 
-						<a style="float:right;vertical-align:middle;" class="btn btn-info btn-small" target="_blank" href="https://ec2-54-226-9-164.compute-1.amazonaws.com/KimRayValve">Launch New Session</a>
+						<a style="float:right;vertical-align:middle;" class="btn btn-info btn-small" target="_blank" href="https://ec2-54-226-9-164.compute-1.amazonaws.com/kimray">Launch New Session</a>
 						<br/>
 						<hr>
 						<p style="font-size:13px;">KimRay Valve is a live 3-D Immersive Maintenance Demonstration built on top of Virtual World Framework to demonstrate the capabilities of Remote Subject Matter Experts interacting with a student using a shared real time lesson workspace utilizing webRTC to deliver real time video and voice over IP without any browser plugins. This demo requires the latest Firefox or Chrome browsers.</p>
