use relative paths

--- a/public/adl/sandbox/views/admin/edit.html
+++ b/public/adl/sandbox/views/admin/edit.html
@@ -56,7 +56,7 @@
 		});
 		
 		$.ajax({
-			url: '{{root}}/admin/' + currentHelpPage, 
+			url: '../admin/' + currentHelpPage, 
 			data: JSON.stringify(jsonToServer),
 			success: function(){
 				console.log("done");
