--- a/public/adl/sandbox/views/layout.html
+++ b/public/adl/sandbox/views/layout.html
@@ -119,17 +119,17 @@
 					<div class="pContainer">
 						<p>No extra plugins needed - just click and go</p>	
 					</div>
-					<div class="divContent0">
+					<!--<div class="divContent0">
 						<h1 class="h1-hero">In Browser</h1>
-					</div>
+					</div>-->
 				</div>
 				<div style="background-image:url('{{root}}/img/huge_town.jpg');" class="slide-item slide-item1">
 					<div class="pContainer">
 						<p>Advanced scripting controls every aspect of your scenario</p>
 					</div>	
-					<div class="divContent1">
+					<!--<div class="divContent1">
 						<h1 class="h1-hero">Full Control</h1>
-					</div>
+					</div>-->
 				</div>
 				<div style="background-image:url('{{root}}/img/huge_office.jpg');" class="slide-item slide-item2">
 					<div class="pContainer">
