--- a/views/admin.html.erb
+++ b/views/admin.html.erb
@@ -4,7 +4,7 @@
 
         <title>Admin</title>
 
-        <script type="text/javascript" src="../jquery-1.7.1.js"></script>
+        <script type="text/javascript" src="../jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="../jquery-ui-1.10.3.custom.min.js"></script>
         <script type="text/javascript" src="../async.js"></script>
 
