--- a/public/adl/sandbox/css/style.css
+++ b/public/adl/sandbox/css/style.css
@@ -3,7 +3,7 @@ html, body{
 	background-color:#f4f4f4;
 	height: 100%;
 	color: #555;
-	background-image: url(http://localhost:3000/adl/sandbox/img/back.png)
+	background-image: url('../img/back.png')
 }
 
 .container{
@@ -98,19 +98,12 @@ height:315px;
 
 #header{
 	width: 100%;
-	/*background-color: #C4DCEC;
-	border-bottom: 1px solid #A2C8E2;*/
 	background-color: #4F89AA;
 	border-bottom: 1px solid #3784B9;
 	height: 25px;
 	clear:both;
 }
 
-#header .headerMenu{
-	margin: 0 19% 0 0;
-	float:right;
-	
-}
 #header .headerA, #header .headerSpan{
 	font-size: 14px;
 	margin: 3px 10px;
@@ -127,11 +120,12 @@ height:315px;
 
 .linkMenu{
 	width: 460px;
-	padding-top: 40px;
+	padding-top: 42px;
 	padding-right: 20px;
 	text-align: right;
 	height: 70px;
-	float:right;
+	position:absolute;
+	left:56%;
 }
 
 .linkMenu a {
@@ -160,7 +154,7 @@ height:315px;
 	height:100px;
 	width:100%;
 	overflow:visible;
-	background-image: url('/adl/sandbox/img/grid.png');
+	background-image: url('../img/grid.png');
 }
 #pageLogo h1, #pageLogo h2{
 
@@ -178,7 +172,6 @@ text-align:left;
 }
 
 .sliderContainer{
-	height:368px;
 	width:100%;
 	overflow:hidden;
 	border:none;
@@ -187,6 +180,13 @@ text-align:left;
 	padding: 0;
 	border-top: 1px solid #84A0C4;
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+	padding-bottom: 30.7%;
+	
+}
+.sliderWrapper{
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .divContent0{
@@ -196,11 +196,15 @@ text-align:left;
 }
 .divContent3{
 	width: 485px;
-	left: 738px;
-	top: 125px;
+	left: 62%;
+	top: 145px;
 	font-family: 'Trebuchet MS', Helvetica, sans-serif;
 	text-shadow: 0 1px 2px #5E7C33;
 	color: #A0CE60;
+}
+
+.divContent3 .h1-hero{
+	font-size: 80px;
 }
 
 .videoList{
@@ -219,12 +223,13 @@ text-align:left;
 
 .slide-item{
 	height:368px;
+	height:100%;
 	width:100%;
 	position:absolute;
 	float:left;
 	cursor: default;
 	z-index: 0;
-	background-size: 100% 368px;
+	background-size: 100%;
 	background-repeat:no-repeat;
 }
 
@@ -233,18 +238,18 @@ text-align:left;
 }
 
 .pContainer{
-
-	top: 370px;
+	margin-top: 31%;
 	height: 55px;
 	width:100%;
 }
 
 .slide-item p{
-	font-size: 31px;
+	font-size: 30px;
 	color: #eee;
 	text-shadow: 0 1px 1px #5C5D5F;
 	text-align: right;
 	line-height: 30px;
+	height:45px;
 	border-radius: 2px;
 	border: 1px solid #444;
 	border: 1px solid rgba(160, 160, 160, 0.2);
