--- a/public/adl/sandbox/views/layout.html
+++ b/public/adl/sandbox/views/layout.html
@@ -11,7 +11,12 @@
 			#gitBanner{
 				display: none;
 			}
-		}					
+		}		
+		@media (max-width: 990px){
+			.linkMenu{
+				left: 546px;
+			}
+		}							
 	</style>
 	<!--[if !IE 7]>
 	<style type="text/css">
@@ -66,7 +71,7 @@
 	</script>
 	{{/home}}
 </head>
-<body style="min-width:1000px;">
+<body style="min-width:990px;">
 	{{#home}}
 	<div id="loadOverlay">
 		<div id="overlayInner" style="position:absolute;top:50%;left:50%;"></div>
@@ -78,7 +83,7 @@
 	{{/home}}
 	<div id="wrapper">
 		<div id="header" style="text-align: center">
-			<div class="headerMenu">
+			<div class="headerMenu container">
 				<div id="username" data-bind="visible:user().isLoggedIn">
 					<span class="headerSpan" data-bind="text:'Logged in as: '"></span>
 					<a class="headerA" href="{{root}}/user" id="userOptions" data-bind="text: user().username"></a>
@@ -115,37 +120,39 @@
 			
 			{{#home}}
 			<div class="container sliderContainer">
-				<div style="background-image:url('{{root}}/img/huge_terrain.jpg');" class="slide-item slide-item0">
-					<div class="pContainer">
-						<p>No extra plugins needed - just click and go</p>	
+				<div class="sliderWrapper">
+					<div style="background-image:url('{{root}}/img/huge_terrain.jpg');" class="slide-item slide-item0">
+						<div class="pContainer">
+							<p>No extra plugins needed - just click and go</p>	
+						</div>
+						<!--<div class="divContent0">
+							<h1 class="h1-hero">In Browser</h1>
+						</div>-->
 					</div>
-					<!--<div class="divContent0">
-						<h1 class="h1-hero">In Browser</h1>
-					</div>-->
-				</div>
-				<div style="background-image:url('{{root}}/img/huge_town.jpg');" class="slide-item slide-item1">
-					<div class="pContainer">
-						<p>Advanced scripting controls every aspect of your scenario</p>
-					</div>	
-					<!--<div class="divContent1">
-						<h1 class="h1-hero">Full Control</h1>
-					</div>-->
-				</div>
-				<div style="background-image:url('{{root}}/img/huge_office.jpg');" class="slide-item slide-item2">
-					<div class="pContainer">
-						<p>Web RTC enables a higher level of collaboration</p>
-					</div>	
-					<div class="divContent2">
-						<h1 class="h1-hero"></h1>
+					<div style="background-image:url('{{root}}/img/huge_town.jpg');" class="slide-item slide-item1">
+						<div class="pContainer">
+							<p>Advanced scripting controls every aspect of your scenario</p>
+						</div>	
+						<!--<div class="divContent1">
+							<h1 class="h1-hero">Full Control</h1>
+						</div>-->
 					</div>
-				</div>
-				<div style="background-image:url('{{root}}/img/huge_editor.jpg');" class="slide-item slide-item3">
-					<div class="pContainer">
-						<p>A full featured set of tools makes building worlds easy</p>
-					</div>	
-					<div class="divContent3">
-						<h1 class="h1-hero">Rich Editor</h1>
-						
+					<div style="background-image:url('{{root}}/img/huge_office.jpg');" class="slide-item slide-item2">
+						<div class="pContainer">
+							<p>Web RTC enables a higher level of collaboration</p>
+						</div>	
+						<div class="divContent2">
+							<h1 class="h1-hero"></h1>
+						</div>
+					</div>
+					<div style="background-image:url('{{root}}/img/huge_editor.jpg');" class="slide-item slide-item3">
+						<div class="pContainer">
+							<p>A full featured set of tools makes building worlds easy</p>
+						</div>	
+						<div class="divContent3">
+							<h1 class="h1-hero">Rich Editor</h1>
+							
+						</div>
 					</div>
 				</div>
 			</div>
