--- a/public/adl/sandbox/views/user.html
+++ b/public/adl/sandbox/views/user.html
@@ -3,6 +3,9 @@
 		<a href="{{root}}/create" id="newinstancebutton" data-bind="visible:user().isLoggedIn">
 			<span class="btn btn-default btn-sm" style="width:100%;">Create World</span>
 		</a>
+		<a href="{{root}}/avatar" id="editavatarbtn" data-bind="visible:user().isLoggedIn">
+			<span class="btn btn-default btn-sm" style="width:100%;">Choose Avatar</span>
+		</a>
 	</div> 
 	<div class="col-md-10">			
 		<div class="row" id="activeRow" data-bind="foreach:displayWorldObjects">				
