--- a/public/adl/sandbox/views/layout.html
+++ b/public/adl/sandbox/views/layout.html
@@ -11,6 +11,11 @@
 			#gitBanner{
 				display: none;
 			}
+		}			
+		@media (max-width: 1220px){
+			#logo{
+				left: 0;
+			}
 		}		
 		@media (max-width: 990px){
 			.linkMenu{
@@ -125,34 +130,21 @@
 						<div class="pContainer">
 							<p>No extra plugins needed - just click and go</p>	
 						</div>
-						<!--<div class="divContent0">
-							<h1 class="h1-hero">In Browser</h1>
-						</div>-->
 					</div>
 					<div style="background-image:url('{{root}}/img/huge_town.jpg');" class="slide-item slide-item1">
 						<div class="pContainer">
 							<p>Advanced scripting controls every aspect of your scenario</p>
 						</div>	
-						<!--<div class="divContent1">
-							<h1 class="h1-hero">Full Control</h1>
-						</div>-->
 					</div>
 					<div style="background-image:url('{{root}}/img/huge_office.jpg');" class="slide-item slide-item2">
 						<div class="pContainer">
 							<p>Web RTC enables a higher level of collaboration</p>
 						</div>	
-						<div class="divContent2">
-							<h1 class="h1-hero"></h1>
-						</div>
 					</div>
 					<div style="background-image:url('{{root}}/img/huge_editor.jpg');" class="slide-item slide-item3">
 						<div class="pContainer">
 							<p>A full featured set of tools makes building worlds easy</p>
 						</div>	
-						<div class="divContent3">
-							<h1 class="h1-hero">Rich Editor</h1>
-							
-						</div>
 					</div>
 				</div>
 			</div>
