added visible flag to objects, fix for objects that move when making a subnode a VWF node, avatars ignore lines

--- a/support/client/lib/vwf/view/editorview/menus.html
+++ b/support/client/lib/vwf/view/editorview/menus.html
@@ -49,6 +49,8 @@
 				  <li><a href="#" id="MenuSnapOff">Off</a></li>
 				  
 			  </ul>
+              <li><a href="#" ></a></li>
+              <li><a href="#" id="ResetTransforms">Reset Transforms</a></li>
 			</li>
 		  </ul>
 	  </li>
