Added generalized relative path function based on location of "sandbox" in pathname

--- a/public/adl/sandbox/views/admin/edit.html
+++ b/public/adl/sandbox/views/admin/edit.html
@@ -56,7 +56,7 @@
 		});
 		
 		$.ajax({
-			url: '../admin/' + currentHelpPage, 
+			url: root + '/admin/' + currentHelpPage, 
 			data: JSON.stringify(jsonToServer),
 			success: function(){
 				console.log("done");
