Converted links in views to use relative paths [#59916218]

--- a/public/adl/sandbox/views/admin/edit.html
+++ b/public/adl/sandbox/views/admin/edit.html
@@ -80,7 +80,7 @@
 		
 		$.ajax({
 			type: 'GET',
-			url: "{{root}}/views/help/" + e + ".js",
+			url: root + "/views/help/" + e + ".js",
 			dataType: "json",
 			success: function(json) {
 				
