Added support for filtering published worlds, should be stable [#60075780]

--- a/public/adl/sandbox/views/worlds.html
+++ b/public/adl/sandbox/views/worlds.html
@@ -3,7 +3,7 @@
 			<div class="row">
 				<div class="col-md-4" style="text-align:left;">
 					<div class="row"> 
-						<div style="float: left;padding-left:15px;">
+						<div style="float: left;padding-left:15px;" data-bind="visible:user().isLoggedIn">
 						<!-- Split button -->
 							<div class="btn-group">
 							  <button type="button" class="btn btn-default" data-toggle="dropdown" data-bind="text:dropDownMap[currentDropDown()]">All worlds</button>
