--- a/public/bzflag/css/smoothness/jquery-ui-1.8.21.custom.css
+++ b/public/bzflag/css/smoothness/jquery-ui-1.8.21.custom.css
@@ -65,7 +65,7 @@
 ----------------------------------*/
 .style1 .ui-state-default, .style1 .ui-widget-content .ui-state-default, .style1 .ui-widget-header .ui-state-default { background: transparent; font-weight: normal; color: #4A7347; border:0px; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #555555; text-decoration: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {background: transparent;font-weight : normal; color: #4A7347; }
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {background: transparent;font-weight : normal; color: #4A7347; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #4A7347; text-decoration: none; }
 .style1 .ui-state-active, .style1 .ui-widget-content .ui-state-active, .style1 .ui-widget-header .ui-state-active { background: transparent; font-weight: normal; color: #4A7347; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #4A7347; text-decoration: none; }
